--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,128 +1,262 @@
 {
-  "appname": {
-    "message": "ShufflePaper",
-    "description": "Name of the app"
-  },
-  "menu_headline": {
-    "message": "Menu",
-    "description": "Headline for the hamburger menu"
-  },
-  "menu_left_1": {
-    "message": "General Settings",
-    "description": "First menu item"
-  },
-  "menu_left_2": {
-    "message": "Keyboard Shortcuts",
-    "description": "Second menu item"
-  },
-  "menu_right_1": {
-    "message": "About",
-    "description": "First three-dots menu item"
-  },
-  "menu_right_2": {
-    "message": "Close",
-    "description": "Second three-dots menu item"
-  },
-  "error_no_folder_specified": {
-    "message": "Please specify a folder <i class=\"material-icons\">keyboard_arrow_right</i>",
-    "description": "Shown when the folder path is empty"
-  },
-  "error_invalid_path": {
-    "message": "The selected folder is invalid",
-    "description": "Shown when the user selects an invalid path (eg. due to selecting a zip-archive)"
-  },
-  "error_invalid_interval": {
-    "message": "Please enter a number between 1 and 99!",
-    "description": "Shown when an invalid number is entered into the interval field"
-  },
-  "tooltip_share": {
-    "message": "Share this app through social media",
-    "description": "Tooltip for the share button"
-  },
-  "tooltip_share_clicked": {
-    "message": "Copied link to clipboard!",
-    "description": "Tooltip for the share button when it's clicked"
-  },
-  "tooltip_refresh": {
-    "message": "Instantly load a new wallpaper",
-    "description": "Tooltip for the refresh button"
-  },
-  "tooltip_refresh_clicked": {
-    "message": "Loaded a new wallpaper!",
-    "description": "Tooltip for the refresh button when it's clicked"
-  },
-  "icon_actionbar_1": {
-    "message": "share",
-    "description": "Icon for the first button next to three-dots button (from the right)"
-  },
-  "icon_actionbar_2": {
-    "message": "refresh",
-    "description": "Icon for the second button next to three-dots button (from the right)"
-  },
-  "icon_menu_right": {
-    "message": "more_vert",
-    "description": "Icon for the three-dots button"
-  },
-  "wallpaper_location_headline": {
-    "message": "Wallpaper location",
-    "description": "Headline for the general settings page"
-  },
-  "keyboard_shortcuts_headline": {
-    "message": "Keyboard shortcuts",
-    "description": "Headline for the keyboard shortcuts page"
-  },
-  "btn_choose_folder": {
-    "message": "Choose",
-    "description": "Caption on the button to choose a folder"
-  },
-  "property_headline_0": {
-    "message": "New wallpaper every&nbsp;",
-    "description": "First settings item in the general settings"
-  },
-  "property_headline_1": {
-    "message": "Pick wallpapers randomly",
-    "description": "Second settings item in the general settings"
-  },
-  "property_headline_2": {
-    "message": "Wallpaper layout",
-    "description": "Third settings item in the general settings"
-  },
-  "options_layout": {
-    "message": "[\"Stretched\",\"Centered\",\"Cropped\"]",
-    "description": "Array used to store layout options"
-  },
-  "keyboard_headline_1": {
-    "message": "[Ctrl] + W to change the wallpaper instantly",
-    "description": "First item in the keyboard settings"
-  },
-  "keyboard_headline_0": {
-    "message": "[Ctrl] + P to pin the current wallpaper until you select a new one",
-    "description": "Second item in the keyboard settings"
-  },
-  "about_text": {
-    "message": "This project is available on <a href=\"https://github.com/CiriousJoker/ShufflePaper\" target=\"_blank\">Github</a> and in the <a href=\"https://chrome.google.com/webstore/detail/shufflepaper/ghcndibmdbeipgggdddmecagpkllglpj\" target=\"_blank\">Chrome Webstore</a>.<br>If you want to share this app, feel free to use the little button in the upper right corner of this window!<br>Also, I would really appreciate it if you <a href=\"https://chrome.google.com/webstore/detail/shufflepaper/ghcndibmdbeipgggdddmecagpkllglpj/reviews\" target=\"_blank\">rated</a> this app as I put a lot of effort into it :)",
-    "description": "Text shown in the about section"
-  },
-  "array_interval_unit": {
-    "message": "[\"minutes\",\"hours\",\"days\"]",
-    "description": "Array used to store time interval units"
-  },
-  "copyright": {
-    "message": "$name$ $symbol$ $year$",
-    "description": "Build a copyright string out of a name and a year",
-    "placeholders": {
-      "symbol": {
-        "content": "\u00A9",
-        "example": "The copyright symbol"
-      },
-      "name": {
-        "content": "$1",
-        "example": "A name"
-      },
-      "year": {
-        "content": "$2",
-        "example": "The current year"
-      }
+    "app_name": {
+        "message": "ShufflePaper",
+        "description": "App name"
+    },
+    "app_description": {
+        "message": "Choose a folder and have your Chromebook automatically shuffle through the wallpapers in it!",
+        "description": "App description"
+    },
+    "app_slogan": {
+        "message": "A wallpaper manager for your Chromebook.",
+        "description": "App slogan"
+    },
+    "notification_install_title": {
+        "message": "Have fun with this app!",
+        "description": "Installation notification title."
+    },
+    "notification_install_message": {
+        "message": "If you like this app, please consider reviewing it by clicking on this notification later. Cheers!",
+        "description": "Installation notification message."
+    },
+    "notification_update_title": {
+        "message": "ShufflePaper was updated to v$version$",
+        "description": "Update notification title.",
+        "placeholders": {
+            "version": {
+                "content": "$1",
+                "example": "1.3.0"
+            }
+        }
+    },
+    "notification_update_message": {
+        "message": "Click to see what's new!",
+        "description": "Update notification message."
+    },
+    "notification_update_title_v_1_3_0": {
+        "message": "Your settings have been reset.",
+        "description": "Additional update title for v1.3.0."
+    },
+    "notification_update_message_v_1_3_0": {
+        "message": "For this update, all settings had to be reset. Please set them again manually. Sorry for the inconvenience.",
+        "description": "Additional update message for v1.3.0."
+    },
+    "notification_error__folder_unreadable_title": {
+        "message": "Folder unreadable",
+        "description": "Error title: folder undreadable"
+    },
+    "notification_error__folder_unreadable_message": {
+        "message": "Please choose a different folder.",
+        "description": "Error message: folder unreadable"
+    },
+    "notification_donation_thanks_title": {
+        "message": "You're the best!",
+        "description": "Donation notification title"
+    },
+    "notification_donation_thanks_message": {
+        "message": "Thanks! It means a lot to me!",
+        "description": "Donation notification message"
+    },
+    "menu_headline": {
+        "message": "Menu",
+        "description": "Headline for the hamburger menu"
+    },
+    "menu_left_1": {
+        "message": "General Settings",
+        "description": "First menu item"
+    },
+    "menu_left_2": {
+        "message": "Keyboard Shortcuts",
+        "description": "Second menu item"
+    },
+    "menu_right_1": {
+        "message": "About",
+        "description": "First three-dots menu item"
+    },
+    "menu_right_2": {
+        "message": "Close",
+        "description": "Second three-dots menu item"
+    },
+    "info_found_images_none": {
+        "message": "No images found.",
+        "description": "Title bar info string."
+    },
+    "info_found_images_singular": {
+        "message": "Found one image.",
+        "description": "Title bar info string."
+    },
+    "info_found_images_plural": {
+        "message": "Found $images$ images.",
+        "description": "Title bar info string.",
+        "placeholders": {
+            "images": {
+                "content": "$1",
+                "example": "1234"
+            }
+        }
+    },
+    "info_skipped_files_singular": {
+        "message": "Skipped one file.",
+        "description": "Title bar info string."
+    },
+    "info_skipped_files_plural": {
+        "message": "Skipped $skipped$ files.",
+        "description": "Inform the user about the number of skipped files.",
+        "placeholders": {
+            "skipped": {
+                "content": "$1",
+                "example": "8"
+            }
+        }
+    },
+    "placeholder_no_folder_specified": {
+        "message": "Please specify a folder <i class=\"material-icons\">keyboard_arrow_right</i>",
+        "description": "Shown when the folder path is empty"
+    },
+    "error_invalid_interval": {
+        "message": "Please enter a number between 1 and 99!",
+        "description": "Shown when an invalid number is entered into the interval field"
+    },
+    "tooltip_share": {
+        "message": "Share this app!",
+        "description": "Tooltip for the share button"
+    },
+    "tooltip_refresh": {
+        "message": "Instantly load a new wallpaper",
+        "description": "Tooltip for the refresh button"
+    },
+    "tooltip_refresh_clicked": {
+        "message": "Loaded a new wallpaper!",
+        "description": "Tooltip for the refresh button when it's clicked"
+    },
+    "snackbar_shared_message": {
+        "message": "Link copied to clipboard!",
+        "description": "Snackbar text after the share button is clicked"
+    },
+    "snackbar_shared_action": {
+        "message": "View",
+        "description": "Snackbar action text after the share button is clicked"
+    },
+    "snackbar_no_folder_selected_message": {
+        "message": "No folder selected.",
+        "description": "Snackbar text if the user tries to do something where a folder is necessary."
+    },
+    "snackbar_no_folder_selected_action": {
+        "message": "Choose",
+        "description": "Snackbar action to choose a folder if none is selected."
+    },
+    "button_review": {
+        "message": "Write review",
+        "description": "Button: review"
+    },
+    "icon_actionbar_1": {
+        "message": "share",
+        "description": "Icon for the first button next to three-dots button (from the right)"
+    },
+    "icon_actionbar_2": {
+        "message": "refresh",
+        "description": "Icon for the second button next to three-dots button (from the right)"
+    },
+    "icon_menu_right": {
+        "message": "more_vert",
+        "description": "Icon for the three-dots button"
+    },
+    "wallpaper_location_headline": {
+        "message": "Wallpaper location",
+        "description": "Headline for the general settings page"
+    },
+    "keyboard_shortcuts_headline": {
+        "message": "Keyboard shortcuts",
+        "description": "Headline for the keyboard shortcuts page"
+    },
+    "btn_choose_folder": {
+        "message": "Choose",
+        "description": "Caption on the button to choose a folder"
+    },
+    "property_headline_0": {
+        "message": "New wallpaper every&nbsp;",
+        "description": "First settings item in the general settings"
+    },
+    "property_headline_1": {
+        "message": "Pick wallpapers randomly",
+        "description": "Second settings item in the general settings"
+    },
+    "property_headline_2": {
+        "message": "Wallpaper layout",
+        "description": "Third settings item in the general settings"
+    },
+    "array_layout_mode": {
+        "message": "[\"cropped\",\"centered\",\"stretched\"]",
+        "description": "Array used to store layout options"
+    },
+    "array_delay_unit": {
+        "message": "[\"minutes\",\"hours\",\"days\"]",
+        "description": "Array used to store time interval units"
+    },
+    "page_about_body": {
+        "message": "This app shows you wallpapers from your folders in customizable intervals, randomized or in order.",
+        "description": "About page main text"
+    },
+    "page_about_support_hint": {
+        "message": "If you're feeling really generous today, feel free to support me ;)",
+        "description": "Hint to support my work"
+    },
+    "copyright": {
+        "message": "$name$ $symbol$ $year$",
+        "description": "Build a copyright string out of a name and a year",
+        "placeholders": {
+            "symbol": {
+                "content": "\u00A9",
+                "example": "The copyright symbol"
+            },
+            "name": {
+                "content": "$1",
+                "example": "A name"
+            },
+            "year": {
+                "content": "$2",
+                "example": "The current year"
+            }
+        }
+    },
+    "prefix__google_drive": {
+        "message": "Google Drive",
+        "description": "Path prefix for Google Drive"
+    },
+    "prefix__google_drive_shared": {
+        "message": "Shared",
+        "description": "Path prefix for shared files"
+    },
+    "prefix__my_files": {
+        "message": "My Files",
+        "description": "Path prefix for My Files"
+    },
+    "prefix__usb_device": {
+        "message": "USB Device",
+        "description": "Path prefix for usb devices"
+    },
+    "prefix__android_audio": {
+        "message": "Audio",
+        "description": "Path prefix for audio"
+    },
+    "prefix__android_images": {
+        "message": "Images",
+        "description": "Path prefix for images"
+    },
+    "prefix__android_videos": {
+        "message": "Videos",
+        "description": "Path prefix for videos"
+    },
+    "prefix__android_media": {
+        "message": "Media",
+        "description": "Path prefix media files, if they're neither audio, images or videos."
+    },
+    "prefix__android_provided": {
+        "message": "Service",
+        "description": "Path prefix for services"
+    },
+    "currency": {
+        "message": "$",
+        "description": "Currency symbol"
     }
-  }
 }
